[gd_scene load_steps=8 format=3 uid="uid://c2wnqfdj2fqk4"]

[ext_resource type="Script" path="res://scripts/explosion_effect.gd" id="1_bnvqc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kmv3d"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_fyiyw"]
material = SubResource("StandardMaterial3D_kmv3d")
radius = 2.5
height = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8muxc"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_g5p5f"]
material = SubResource("StandardMaterial3D_8muxc")
radius = 0.2
height = 0.4

[sub_resource type="Curve" id="Curve_fw1c6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="SphereShape3D" id="SphereShape3D_d7mhq"]
radius = 2.5

[node name="ExplosionEffect" type="Node3D"]
script = ExtResource("1_bnvqc")

[node name="Water_Collision" type="MeshInstance3D" parent="."]
layers = 524288
mesh = SubResource("SphereMesh_fyiyw")

[node name="base_explosion" type="CPUParticles3D" parent="."]
emitting = false
amount = 32
lifetime = 0.75
one_shot = true
explosiveness = 1.0
mesh = SubResource("SphereMesh_g5p5f")
emission_shape = 1
emission_sphere_radius = 0.1
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
scale_amount_curve = SubResource("Curve_fw1c6")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_d7mhq")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
